[gd_scene load_steps=2 format=2]

[ext_resource path="res://bpm_timingpoint_dialog.gd" type="Script" id=1]

[node name="BPMTimingPointDialog" type="WindowDialog" groups=["bpm_timingpoint_dialog"]]
margin_right = 189.0
margin_bottom = 151.0
size_flags_vertical = 3
window_title = "Edit BPM Timing Point"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -61.0
margin_right = 50.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 101.0
margin_bottom = 80.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Offset"

[node name="OffsetValue" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 43.0
margin_right = 101.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 39.0
margin_bottom = 47.0
text = "BPM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPMValue" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 43.0
margin_top = 28.0
margin_right = 101.0
margin_bottom = 52.0

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 39.0
margin_bottom = 75.0
text = "Meter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterValue" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 43.0
margin_top = 56.0
margin_right = 101.0
margin_bottom = 80.0

[node name="ErrorMsg" type="Label" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 101.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 0.533333, 0.533333, 1 )

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 101.0
margin_bottom = 122.0
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
